salesforce/force-app/main/default/objects/Hotel_Room__c/Hotel_Room__c.object-meta.xml
<CustomObject>
    <label>Hotel Room</label>
    <pluralLabel>Hotel Rooms</pluralLabel>
    <nameField>
        <label>Room Name</label>
        <type>Text</type>
    </nameField>
    <description>Master data for room inventory</description>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>