salesforce/force-app/main/default/objects/Hotel_Room__c/fields/Accessible__c.field-meta.xml
<CustomField>
    <fullName>Accessible__c</fullName>
    <label>ADA Accessible</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>