salesforce/force-app/main/default/objects/Hotel_Room__c/fields/Bed_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Bed_Configuration__c</fullName>
    <label>Bed Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 King</fullName>
            </value>
            <value>
                <fullName>1 Queen</fullName>
            </value>
            <value>
                <fullName>2 Queens</fullName>
            </value>
            <value>
                <fullName>2 Doubles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>