salesforce/force-app/main/default/objects/Hotel_Room__c/fields/Max_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Max_Occupancy__c</fullName>
    <label>Max Occupancy</label>
    <type>Number</type>
    <precision>1</precision>
    <scale>0</scale>
</CustomField>