salesforce/force-app/main/default/objects/Hotel_Room__c/fields/Room_Number__c.field-meta.xml
<CustomField>
    <fullName>Room_Number__c</fullName>
    <externalId>true</externalId>
    <label>Room Number</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>