salesforce/force-app/main/default/objects/Hotel_Room__c/fields/Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Square_Footage__c</fullName>
    <label>Square Footage</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>